Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -681,13 +681,13 @@ h3 {
                     <div class="flex space-x-4">
                         <!-- Instagram Reel Cards -->
                         <div class="flex-none w-80">
-                            <iframe src="https://www.instagram.com/reel/DBQ2FsSRkZu/embed" class="w-full h-[600px] rounded-lg shadow-lg" frameborder="0" scrolling="no" allowtransparency="true"></iframe>
+                            <iframe src="https://www.instagram.com/reel/C4uNzIALi1U/embed" class="w-full h-[600px] rounded-lg shadow-lg" frameborder="0" scrolling="no" allowtransparency="true"></iframe>
                         </div>
                         <div class="flex-none w-80">
-                            <iframe src="https://www.instagram.com/reel/C7sJGelujdY/embed" class="w-full h-[600px] rounded-lg shadow-lg" frameborder="0" scrolling="no" allowtransparency="true"></iframe>
+                            <iframe src="https://www.instagram.com/reel/CzcrNrZrS6h/embed" class="w-full h-[600px] rounded-lg shadow-lg" frameborder="0" scrolling="no" allowtransparency="true"></iframe>
                         </div>
                         <div class="flex-none w-80">
-                            <iframe src="https://www.instagram.com/reel/C7U6uUhOqre/embed" class="w-full h-[600px] rounded-lg shadow-lg" frameborder="0" scrolling="no" allowtransparency="true"></iframe>
+                            <iframe src="https://www.instagram.com/reel/Cym73xtrdKw/embed" class="w-full h-[600px] rounded-lg shadow-lg" frameborder="0" scrolling="no" allowtransparency="true"></iframe>
                         </div>
                     </div>
                 </div>
@@ -842,45 +842,45 @@ h3 {
     </main>
 
     <!-- Footer -->
-    <footer class="gradient-bg text-white py-12 footer-spacing">
-        <div class="container mx-auto px-4">
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-                <div class="flex flex-col items-center md:items-start">
-                    <img src="img/logo.png" alt="Nathan Paint Correction Logo" class="h-24 w-auto mb-4">
-                    <p class="text-center md:text-left">Professional auto detailing services in Watford, Ontario.</p>
-                </div>
-                <div class="text-center md:text-left">
-                    <h3 class="text-xl font-semibold mb-4">Contact</h3>
-                    <p>123 Main St, Watford, ON N0M 2S0</p>
-                    <p>Phone: (123) 456-7890</p>
-                    <p>Email: nathanspaintcorrection@gmail.com</p>
-                    <div class="flex justify-center md:justify-start space-x-4 mt-4">
-                        <a href="#" class="hover:text-secondary-color transition"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#" class="hover:text-secondary-color transition"><i class="fab fa-instagram"></i></a>
-                        <a href="#" class="hover:text-secondary-color transition"><i class="fab fa-twitter"></i></a>
-                    </div>
-                </div>
-                <div>
-                    <h3 class="text-xl font-semibold mb-4 text-center md:text-left">Newsletter</h3>
-                    <form id="newsletter-form" class="flex flex-col space-y-4" action="https://formspree.io/f/your-formspree-id" method="POST">
-                        <input type="email" name="email" placeholder="Your email" class="px-4 py-2 rounded-full text-gray-800" required>
-                        <button type="submit" class="bg-secondary-color text-primary-color px-4 py-2 rounded-full hover:bg-opacity-90 transition">Subscribe</button>
-                    </form>
+<footer class="gradient-bg text-white py-12 footer-spacing">
+    <div class="container mx-auto px-4">
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+            <div class="flex flex-col items-center md:items-start">
+                <img src="img/logo.png" alt="Loyal Mobile Detailing Logo" class="h-24 w-auto mb-4">
+                <p class="text-center md:text-left">Luxury mobile detailing services across Los Angeles, Orange County, and the Inland Empire.</p>
+            </div>
+            <div class="text-center md:text-left">
+                <h3 class="text-xl font-semibold mb-4">Contact</h3>
+                <p>Serving: Los Angeles, OC, and IE</p>
+                <p>Phone: +1 (626) 534-9514</p>
+                <p>Email: info@loyalmobiledetailing.com</p>
+                <div class="flex justify-center md:justify-start space-x-4 mt-4">
+                    <a href="#" class="hover:text-secondary-color transition"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#" class="hover:text-secondary-color transition"><i class="fab fa-instagram"></i></a>
+                    <a href="#" class="hover:text-secondary-color transition"><i class="fab fa-twitter"></i></a>
                 </div>
             </div>
-            <div class="mt-8 text-center">
-                <p>&copy; 2024 Nathan Paint Correction. All rights reserved.</p>
-                <p class="mt-2">Powered by Duality Domain</p>
+            <div>
+                <h3 class="text-xl font-semibold mb-4 text-center md:text-left">Newsletter</h3>
+                <form id="newsletter-form" class="flex flex-col space-y-4" action="https://formspree.io/f/your-formspree-id" method="POST">
+                    <input type="email" name="email" placeholder="Your email" class="px-4 py-2 rounded-full text-gray-800" required>
+                    <button type="submit" class="bg-secondary-color text-primary-color px-4 py-2 rounded-full hover:bg-opacity-90 transition">Subscribe</button>
+                </form>
             </div>
         </div>
-    </footer>
+        <div class="mt-8 text-center">
+            <p>&copy; 2024 Loyal Mobile Detailing. All rights reserved.</p>
+            <p class="mt-2">Powered by Duality Domain</p>
+        </div>
+    </div>
+</footer>
 
     <!-- Botón flotante de WhatsApp -->
-    <a href="https://wa.me/1234567890" class="floating-btn whatsapp" target="_blank" rel="noopener noreferrer">
-        <i class="fab fa-whatsapp text-white text-3xl"></i>
-    </a>
+<a href="https://wa.me/16265349514" class="floating-btn whatsapp" target="_blank" rel="noopener noreferrer">
+    <i class="fab fa-whatsapp text-white text-3xl"></i>
+</a>
 
-    <!-- Botón flotante de Book Now con notificación -->
+<!-- Botón flotante de Book Now con notificación -->
 <div class="fixed bottom-20 right-5 z-50 flex items-center">
     <div id="bookNowNotification" class="bg-yellow-400 text-black px-4 py-2 rounded-full mr-2 opacity-0 transition-opacity duration-300 ease-in-out">
         Book now here!
