Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@ h3 {
 <body class="font-sans">
     <!-- Preloader -->
 <div class="preloader">
-    <img src="https://loyalmobiledetailing.com/logo.png" alt="Loyal Mobile Detailing Logo" class="preloader-logo">
+    <img src="img/logo.png" alt="Loyal Mobile Detailing Logo" class="preloader-logo">
     <div class="preloader-text">Powered by Duality Domain</div>
 </div>
 
@@ -451,7 +451,7 @@ h3 {
     <nav class="container mx-auto px-4 py-3">
         <div class="flex justify-between items-center">
             <a href="#" class="flex items-center">
-                <img src="https://loyalmobiledetailing.com/logo.png" alt="Loyal Mobile Detailing Logo" class="h-16 w-auto">
+                <img src="img/logo.png" alt="Loyal Mobile Detailing Logo" class="h-16 w-auto">
             </a>
             <div class="hidden md:flex space-x-4">
                 <a href="#about" class="text-white hover:text-secondary-color transition">About</a>
