--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@ h3 {
                         "https://images.unsplash.com/photo-1600880292203-757bb62b4baf?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80",
                         "https://images.unsplash.com/photo-1607860108855-64acf2078ed9?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"
                     ]' data-description="Complete wash and wax process for a 2023 BMW M3. Includes deep cleaning, minor paint correction, and protective waxing.">
-                        <img src=img/1.png" alt="BMW M3 Wash" class="w-full h-64 object-cover rounded-lg shadow-md cursor-pointer">
+                        <img src=https://clientesweb.github.io/Loyal/img/1.png" alt="BMW M3 Wash" class="w-full h-64 object-cover rounded-lg shadow-md cursor-pointer">
                         <div class="p-4">
                             <h3 class="font-semibold mb-2">BMW M3 Full Detail</h3>
                             <p class="text-sm text-gray-600 mb-4">Premium wash and wax service</p>
