Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@ h3 {
                         "https://images.unsplash.com/photo-1600880292203-757bb62b4baf?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80",
                         "https://images.unsplash.com/photo-1607860108855-64acf2078ed9?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"
                     ]' data-description="Complete wash and wax process for a 2023 BMW M3. Includes deep cleaning, minor paint correction, and protective waxing.">
-                        <img src=https://clientesweb.github.io/Loyal/img/1.png" alt="BMW M3 Wash" class="w-full h-64 object-cover rounded-lg shadow-md cursor-pointer">
+                        <img src="img/1.png" alt="BMW M3 Wash" class="w-full h-64 object-cover rounded-lg shadow-md cursor-pointer">
                         <div class="p-4">
                             <h3 class="font-semibold mb-2">BMW M3 Full Detail</h3>
                             <p class="text-sm text-gray-600 mb-4">Premium wash and wax service</p>
@@ -620,7 +620,7 @@ h3 {
                         "https://images.unsplash.com/photo-1507136566006-cfc505b114fc?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80",
                         "https://images.unsplash.com/photo-1603386329225-868f9b1ee6c9?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"
                     ]' data-description="Complete interior detailing of a luxury SUV. Includes deep upholstery cleaning, leather treatment, and total sanitization.">
-                        <img src="https://images.unsplash.com/photo-1601362840469-51e4d8d58785?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="SUV Interior Detailing" class="w-full h-64 object-cover rounded-lg shadow-md cursor-pointer">
+                        <img src="img/2.png" alt="SUV Interior Detailing" class="w-full h-64 object-cover rounded-lg shadow-md cursor-pointer">
                         <div class="p-4">
                             <h3 class="font-semibold mb-2">SUV Interior Renovation</h3>
                             <p class="text-sm text-gray-600 mb-4">Premium interior detailing</p>
@@ -634,7 +634,7 @@ h3 {
                         "https://images.unsplash.com/photo-1618843479313-40f8afb4b4d8?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80",
                         "https://images.unsplash.com/photo-1612825173281-9a193378527e?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"
                     ]' data-description="Paint correction on a Porsche 911. Removal of deep scratches, polishing, and application of high-end wax.">
-                        <img src="https://images.unsplash.com/photo-1619642751034-765dfdf7c58e?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Porsche Paint Correction" class="w-full h-64 object-cover rounded-lg shadow-md cursor-pointer">
+                        <img src="img/3.png" alt="Porsche Paint Correction" class="w-full h-64 object-cover rounded-lg shadow-md cursor-pointer">
                         <div class="p-4">
                             <h3 class="font-semibold mb-2">Porsche 911 Restoration</h3>
                             <p class="text-sm text-gray-600 mb-4">Professional paint correction</p>
@@ -648,7 +648,7 @@ h3 {
                         "https://images.unsplash.com/photo-1612825173281-9a193378527e?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80",
                         "https://images.unsplash.com/photo-1605618313023-d810c2b49e32?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"
                     ]' data-description="Application of ceramic coating on a Tesla Model S. Long-lasting protection against the elements and exceptional shine.">
-                        <img src="https://images.unsplash.com/photo-1618843479313-40f8afb4b4d8?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Tesla Ceramic Coating" class="w-full h-64 object-cover rounded-lg shadow-md cursor-pointer">
+                        <img src="img/4.png" alt="Tesla Ceramic Coating" class="w-full h-64 object-cover rounded-lg shadow-md cursor-pointer">
                         <div class="p-4">
                             <h3 class="font-semibold mb-2">Tesla Ceramic Protection</h3>
                             <p class="text-sm text-gray-600 mb-4">High-end ceramic coating</p>
