--- a/index.html
+++ b/index.html
@@ -813,7 +813,7 @@ h3 {
                 <h2 class="text-3xl font-bold mb-8 text-center text-primary-color" data-aos="fade-up">Contact Us</h2>
                 <div class="flex flex-wrap -mx-4">
                     <div class="w-full md:w-1/2 px-4 mb-8 md:mb-0">
-                        <form id="contact-form" class="space-y-4" action="https://formspree.io/f/your-formspree-id" method="POST">
+                        <form id="contact-form" class="space-y-4" action="https://formspree.io/f/mnnqvvqb" method="POST">
                             <div>
                                 <label for="name" class="block text-sm font-medium text-gray-700 mb-1">Name</label>
                                 <input type="text" id="name" name="name" class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-primary-color" required>
@@ -853,7 +853,7 @@ h3 {
                 <h3 class="text-xl font-semibold mb-4">Contact</h3>
                 <p>Serving: Los Angeles, OC, and IE</p>
                 <p>Phone: +1 (626) 534-9514</p>
-                <p>Email: info@loyalmobiledetailing.com</p>
+                <p>Email: loyalmobiledetailingoficial@gmail.com</p>
                 <div class="flex justify-center md:justify-start space-x-4 mt-4">
                     <a href="#" class="hover:text-secondary-color transition"><i class="fab fa-facebook-f"></i></a>
                     <a href="#" class="hover:text-secondary-color transition"><i class="fab fa-instagram"></i></a>
@@ -862,7 +862,7 @@ h3 {
             </div>
             <div>
                 <h3 class="text-xl font-semibold mb-4 text-center md:text-left">Newsletter</h3>
-                <form id="newsletter-form" class="flex flex-col space-y-4" action="https://formspree.io/f/your-formspree-id" method="POST">
+                <form id="newsletter-form" class="flex flex-col space-y-4" action="https://formspree.io/f/mnnqvvqb" method="POST">
                     <input type="email" name="email" placeholder="Your email" class="px-4 py-2 rounded-full text-gray-800" required>
                     <button type="submit" class="bg-secondary-color text-primary-color px-4 py-2 rounded-full hover:bg-opacity-90 transition">Subscribe</button>
                 </form>
@@ -895,7 +895,7 @@ h3 {
         <div class="modal-content">
             <span class="close">&times;</span>
             <h2 class="text-2xl font-bold mb-4">Book Your Appointment</h2>
-            <form id="booking-form" class="space-y-4" action="https://formspree.io/f/your-formspree-id" method="POST">
+            <form id="booking-form" class="space-y-4" action="https://formspree.io/f/mnnqvvqb" method="POST">
                 <div>
                     <label for="booking-name" class="block text-sm font-medium text-gray-700 mb-1">Name</label>
                     <input type="text" id="booking-name" name="name" class="w-full px-3 py-2 border border-gray-300 rounded-md" required>
